--- a/rlev/templates/registration/login.html
+++ b/rlev/templates/registration/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <title>כניסה</title>
-    <link rel="icon" href="/dashboard/media/logo.png">
+    <link rel="icon" href="/media/logo.png"> 
 </head>
 
 <body class="bg-body-tertiary d-flex align-items-start justify-content-center vh-100">
@@ -16,7 +16,7 @@
         <form class="text-right" method="post">
             {% csrf_token %}
             <div class="text-center">
-                <img class="mb-4" src="/dashboard/media/logo.png" width="72" height="72">
+                <img class="mb-4" src="/media/logo.png" width="72" height="72">
             </div>
             <h1 class="h3 fw-normal text-center">רחשי לב<br>ניהול הרשאות אורחים</h1>
             <div class="mb-3 text-center">
